tests/fixtures/invalid/round_dict_bool.py
# Cannot call round() with Dict[str, int], Bool
x = round({"a": 1}, True)
